[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "mlx-whisper>=0.4.3",
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.2.4",
]
