[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "googletrans==4.0.0rc1",
    "mlx-whisper>=0.4.3",
    "sse-starlette>=3.2.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "yt-dlp>=2026.2.4",
]
